--- a/sample.html
+++ b/sample.html
@@ -10,7 +10,7 @@
     </head>
     <body>
    
-        <h1>dsdfdsfdsfds</h1>
+        <h1>Fuck this shit</h1>
 
         <script src="" async defer></script>
     </body>
