--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <title>HazardHub | Login</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Google Font: Poppins -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
