--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -25,7 +25,7 @@
         
         <div class="password-box">
           <input type="password" placeholder="Password" required>
-          <span class="eye">👁</span>
+          <span class="eye"></span>
         </div>
 
         <a href="#" class="forgot">Forgot Password?</a>
