--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -1,41 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>HazardHub | Login</title>
-  <link rel="stylesheet" href="style.css">
-  <!-- Google Font: Poppins -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hazard Hub - Login</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <div class="login-container">
-    <div class="login-card">
-      
-      <div class="logo">
-        <img src="logo.png" alt="HazardHub Logo">
-        <h1>Hazard <span>Hub</span></h1>
+  <!-- Top bar -->
+  <div class="bar"></div>
+
+  <main class="container">
+    <div class="card">
+
+      <!-- Icon -->
+      <div class="icon">
+        <!-- simple inline SVG similar to your design -->
+        <svg width="80" height="80" viewBox="0 0 24 24" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path d="M3 12c2-4 6-6 9-6s7 2 9 6c-2 4-6 6-9 6s-7-2-9-6Z"
+            stroke="#000" stroke-width="1.5"/>
+          <path d="M12 9v6M9 12h6"
+            stroke="#000" stroke-width="1.5"/>
+        </svg>
       </div>
 
-      <form id="loginForm">
-        <input type="email" placeholder="Email" required>
-        
-        <div class="password-box">
-          <input type="password" placeholder="Password" required>
-          <span class="eye"></span>
+      <!-- Title -->
+      <h1>
+        <span class="bold">Hazard</span>
+        <span class="light">Hub</span>
+      </h1>
+
+      <!-- Login box -->
+      <div class="login-box">
+        <input type="email" placeholder="Email" />
+        <div class="password-field">
+          <input type="password" placeholder="Password" />
+          <span class="eye">👁</span>
         </div>
 
-        <a href="#" class="forgot">Forgot Password?</a>
+        <a href="#" class="forgot">Forgot Password</a>
 
-        <button type="submit">LOGIN</button>
-      </form>
+        <button>LOGIN</button>
+      </div>
 
     </div>
-  </div>
+  </main>
 
-<script src="script.js"></script>
+  <!-- Bottom bar -->
+  <div class="bar"></div>
+
 </body>
 </html>
