--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -36,8 +36,9 @@
       <div class="login-box">
         <input type="email" placeholder="Email" />
         <div class="password-field">
-          <input type="password" placeholder="Password" />
-          <span class="eye">👁</span>
+  <input type="password" placeholder="Password" />
+</div>
+
         </div>
 
         <a href="#" class="forgot">Forgot Password</a>
