--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+  <div class="icon">
+  <img src="images/logo.png" alt="Hazard Hub Logo">
+</div>
+
   <!-- Top bar -->
   <div class="bar"></div>
 
