--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -8,40 +8,32 @@
 </head>
 <body>
 
-  
   <!-- Top bar -->
   <div class="bar"></div>
 
   <main class="container">
     <div class="card">
-    
 
       <!-- Icon -->
       <div class="icon">
-        <!-- simple inline SVG similar to your design -->
-        <svg width="80" height="80" viewBox="0 0 24 24" fill="none"
+        <svg width="70" height="70" viewBox="0 0 24 24" fill="none"
           xmlns="http://www.w3.org/2000/svg">
-          <path d="M3 12c2-4 6-6 9-6s7 2 9 6c-2 4-6 6-9 6s-7-2-9-6Z"
-            stroke="#000" stroke-width="1.5"/>
-          <path d="M12 9v6M9 12h6"
-            stroke="#000" stroke-width="1.5"/>
+          <circle cx="12" cy="12" r="9" stroke="#000" stroke-width="1.5"/>
+          <path d="M12 7v6" stroke="#000" stroke-width="1.5"/>
+          <circle cx="12" cy="16" r="1" fill="#000"/>
         </svg>
       </div>
 
       <!-- Title -->
       <h1>
         <span class="bold">Hazard</span>
-        <span class="light">Hub</span>
+        <span class="light"> Hub</span>
       </h1>
 
       <!-- Login box -->
       <div class="login-box">
         <input type="email" placeholder="Email" />
-        <div class="password-field">
-  <input type="password" placeholder="Password" />
-</div>
-
-        </div>
+        <input type="password" placeholder="Password" />
 
         <a href="#" class="forgot">Forgot Password</a>
 
