--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -16,13 +16,8 @@
 
       <!-- Icon -->
       <div class="icon">
-        <svg width="70" height="70" viewBox="0 0 24 24" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <circle cx="12" cy="12" r="9" stroke="#000" stroke-width="1.5"/>
-          <path d="M12 7v6" stroke="#000" stroke-width="1.5"/>
-          <circle cx="12" cy="16" r="1" fill="#000"/>
-        </svg>
-      </div>
+  <img src="images/hazard-logo.png" alt="Hazard Hub Logo">
+</div>
 
       <!-- Title -->
       <h1>
