--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -41,5 +41,36 @@
   <!-- Bottom bar -->
   <div class="bar"></div>
 
+  <button onclick="login()">LOGIN</button>
+  <input type="email" id="email" placeholder="Email">
+<input type="password" id="password" placeholder="Password">
+<script>
+  function login() {
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
+    // Add your login logic here
+    console.log('Email:', email);
+    console.log('Password:', password);
+  }
+  <script>
+  function login() {
+    const email = document.getElementById("email").value;
+    const password = document.getElementById("password").value;
+
+    if (email === "" || password === "") {
+      alert("Please fill in all fields");
+      return;
+    }
+
+    // TEMPORARY LOGIN CHECK
+    if (email === "admin@gmail.com" && password === "1234") {
+      alert("Login successful!");
+      window.location.href = "dashboard.html";
+    } else {
+      alert("Invalid email or password");
+    }
+  }
+</script>
+
 </body>
 </html>
