--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -72,5 +72,20 @@
   }
 </script>
 
+#Forgot_Password_Link
+<a href="forgot-password.html" class="forgot">Forgot Password?</a>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Forgot Password</title>
+</head>
+<body>
+
+<h2>Forgot Password</h2>
+<input type="email" placeholder="Enter your email">
+<button>Send Reset Link</button>
+
+
+
 </body>
 </html>
