--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -19,6 +19,7 @@
   <img src="images/hazard-logo.png" alt="Hazard Hub Logo">
 </div>
 
+
       <!-- Title -->
       <h1>
         <span class="bold">Hazard</span>
@@ -35,10 +36,11 @@
         <button>LOGIN</button>
       </div>
 
-    
-  
+    </div>
+  </main>
 
-
+  <!-- Bottom bar -->
+  <div class="bar"></div>
 
 </body>
 </html>
