--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -14,8 +14,10 @@
   <main class="container">
     <div class="card">
 
-      <!-- Icon -->
-       <img src="images/hazard-logo.png" alt="Hazard Hub Logo">
+      <div class="icon">
+  <img src="images/hazard-logo.svg" alt="Hazard Hub Logo">
+</div>
+
 
       <!-- Title -->
       <h1>
