--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -15,7 +15,7 @@
     <div class="card">
 
       <div class="icon">
-  <img src="images/hazard-logo.svg" alt="Hazard Hub Logo">
+  <img src="images/hazard-logo.png" alt="Hazard Hub Logo">
 </div>
 
 
