--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -32,7 +32,8 @@
 
         <a href="#" class="forgot">Forgot Password</a>
 
-        <button>LOGIN</button>
+       <button type="submit" class="login-btn">Login</button>
+
       </div>
 
     </div>
