--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -6,41 +6,23 @@
   <title>Hazard Hub - Login</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+  <body>
+  <div class="page">
+    <div class="login-card">
 
-  <!-- Top bar -->
-  <div class="bar"></div>
+      <img src="icon.png" class="logo" />
 
-  <main class="container">
-    <div class="card">
+      <h1>Hazard <span>Hub</span></h1>
 
-      <div class="icon">
-  <img src="images/hazard-logo.png" alt="Hazard Hub Logo">
-</div>
-
-
-      <!-- Title -->
-      <h1>
-        <span class="bold">Hazard</span>
-        <span class="light"> Hub</span>
-      </h1>
-
-      <!-- Login box -->
-      <div class="login-box">
+      <form class="login-form">
         <input type="email" placeholder="Email" />
         <input type="password" placeholder="Password" />
 
-        <a href="#" class="forgot">Forgot Password</a>
+        <a href="#" class="forgot-password">Forgot Password</a>
 
-       <button type="submit" class="login-btn">Login</button>
-
-      </div>
+        <button type="submit" class="login-btn">LOGIN</button>
+      </form>
 
     </div>
-  </main>
-
-  <!-- Bottom bar -->
-  <div class="bar"></div>
-
+  </div>
 </body>
-</html>
