--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -6,23 +6,41 @@
   <title>Hazard Hub - Login</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-  <body>
-  <div class="page">
-    <div class="login-card">
+<body>
 
-      <img src="icon.png" class="logo" />
+  <!-- Top bar -->
+  <div class="bar"></div>
 
-      <h1>Hazard <span>Hub</span></h1>
+  <main class="container">
+    <div class="card">
 
-      <form class="login-form">
+      <div class="icon">
+  <img src="images/hazard-logo.png" alt="Hazard Hub Logo">
+</div>
+
+
+      <!-- Title -->
+      <h1>
+        <span class="bold">Hazard</span>
+        <span class="light"> Hub</span>
+      </h1>
+
+      <!-- Login box -->
+      <div class="login-box">
         <input type="email" placeholder="Email" />
         <input type="password" placeholder="Password" />
 
-        <a href="#" class="forgot-password">Forgot Password</a>
+        <a href="#" class="forgot">Forgot Password</a>
 
-        <button type="submit" class="login-btn">LOGIN</button>
-      </form>
+       <button type="submit" class="login-btn">Login</button>
+
+      </div>
 
     </div>
-  </div>
+  </main>
+
+  <!-- Bottom bar -->
+  <div class="bar"></div>
+
 </body>
+</html>
