--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -32,8 +32,7 @@
 
         <a href="#" class="forgot">Forgot Password</a>
 
-       <button type="submit" class="login-btn">Login</button>
-
+        <button>LOGIN</button>
       </div>
 
     </div>
