--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -1,45 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hazard Hub - Login</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+    <link rel="stylesheet" href="styles.css">
+    <script defer src="login.js"></script>
 </head>
 <body>
+  <div class="page">
+    <div class="login-card">
 
-  <!-- Top bar -->
-  <div class="bar"></div>
+      <img src="icon.png" class="logo" />
 
-  <main class="container">
-    <div class="card">
+      <h1>Hazard <span>Hub</span></h1>
 
-      <div class="icon">
-  <img src="images/hazard-logo.png" alt="Hazard Hub Logo">
-</div>
-
-
-      <!-- Title -->
-      <h1>
-        <span class="bold">Hazard</span>
-        <span class="light"> Hub</span>
-      </h1>
-
-      <!-- Login box -->
-      <div class="login-box">
+      <form class="login-form">
         <input type="email" placeholder="Email" />
         <input type="password" placeholder="Password" />
 
-        <a href="#" class="forgot">Forgot Password</a>
+        <a href="#" class="forgot-password">Forgot Password</a>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-        <button>LOGIN</button>
-      </div>
+
+        <button type="submit" class="login-btn">LOGIN</button>
+      </form>
 
     </div>
-  </main>
-
-  <!-- Bottom bar -->
-  <div class="bar"></div>
-
+  </div>
 </body>
-</html>
