--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -12,6 +12,10 @@
     <div class="login-card">
 
       <img src="icon.png" class="logo" />
+      <div class="icon">
+  <img src="images/hazard-logo.png" alt="Hazard Hub Logo">
+</div>
+
 
       <h1>Hazard <span>Hub</span></h1>
 
