--- a/sample.html
+++ b/sample.html
@@ -10,7 +10,7 @@
     </head>
     <body>
    
-        <h1>I love you Jaycyl</h1>
+        <h1>Natatae na ako</h1>
 
         <script src="" async defer></script>
     </body>
